<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">

    <com.scyoung.housepoints.preference.MissingAssignmentEditTextPreference
        android:key="assignment"
        android:title="@string/add_missing_assignments"
        android:dialogTitle="@string/enter_new_assignment"
        android:inputType="text"
        android:defaultValue=""
        android:singleLine="true" />

    <com.scyoung.housepoints.preference.MissingAssignmentDeleteListPreference
        android:dialogTitle="@string/select_assignments_to_delete"
        android:key="missing_delete"
        android:summary=""
        android:negativeButtonText="@string/pref_dialog_neg_delete_assignments"
        android:positiveButtonText="@string/pref_dialog_pos_delete_assignments"
        android:title="@string/completed_assignments"
        android:defaultValue="@array/empty_array"/>

</PreferenceScreen>
