<preference-headers xmlns:android="http://schemas.android.com/apk/res/android">

    <!-- These settings headers are only used on tablets. -->


    <header
        android:fragment="com.scyoung.housepoints.PointSettings$AdminPreferenceFragment"
        android:icon="@drawable/administrator_24"
        android:title="@string/pref_header_admin" />

    <header
        android:fragment="com.scyoung.housepoints.PointSettings$PointThresholdFragment"
        android:icon="@drawable/beaker_24"
        android:title="@string/pref_header_points_threshold" />

    <header
        android:fragment="com.scyoung.housepoints.PointSettings$PointCostFragment"
        android:icon="@drawable/cost_24"
        android:title="@string/pref_header_points_cost" />

    <header
        android:fragment="com.scyoung.housepoints.PointSettings$PunishmentDurationFragment"
        android:icon="@drawable/time_24"
        android:title="@string/pref_header_punishment_duration" />

    <header
        android:fragment="com.scyoung.housepoints.PointSettings$HousePointsFragment"
        android:icon="@drawable/points_24"
        android:title="@string/pref_header_house_points" />

    <header
        android:fragment="com.scyoung.housepoints.PointSettings$NotificationPreferenceFragment"
        android:icon="@drawable/ic_notifications_black_24dp"
        android:title="@string/pref_header_notifications" />


</preference-headers>
